# Repo-Contextor

./: .gitignore  README.md  pyproject.toml  test-code-splitting.json  test-iteration2.json  test-iteration2.yaml  test-iteration3.json  test-iteration3.yaml  test-iteration4.json  test-iteration4.yaml  test-iteration5.json  test-iteration5.yaml  test-naming-improvements.json  test-naming-improvements.yaml  test-output.json  test-yaml.yaml
src/rcpack/: cli.py  discover.py  packager.py  repository_analyzer.py  treeview.py  utils.py
src/rcpack/renderer/: jsonyaml.py  markdown.py
tests/: test_cli.py  test_config_loader.py  test_io_utils.py  test_utils.py
