[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcpack"
version = "1.0.0"
description = "Repository Context Packager CLI for LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0"
]

authors = [
    { name = "Your Name", email = "you@example.com" }
]

keywords = ["repository", "context", "packager", "llm", "cli"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
repo-contextor = "rcpack.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "build", "twine"]
